--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,6 @@ dependencies {
     debugImplementation rootProject.ext.dependencies["canary-debug"]
     releaseImplementation rootProject.ext.dependencies["canary-release"]
     testImplementation rootProject.ext.dependencies["canary-release"]
-    compile rootProject.ext.dependencies["autolayout"]
-    compile 'me.jessyan:arms:2.3.1'
+    implementation rootProject.ext.dependencies["autolayout"]
+    implementation 'me.jessyan:arms:2.3.1'
 }
